tests/should-fail/syntax/type-as-name-3.j
globals
    constant integer type = 3
endglobals
